[FIX] Bad blog title text/background contrast. Cold needs more specific selector to override strasa.css blog title background image.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@19048 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/strasa/options/cold.css
+++ b/styles/strasa/options/cold.css
@@ -760,6 +760,7 @@ body.tiki_blogs .author_actions .actions {
 	background: #fff !important;
 }
 
+body.tiki_blogs .postbody-title,
 .post .postbody-title {
 	background: #f5f5f5 url(cold/headerbg.jpg) repeat-x 0 100%;
 	
